Fixed splash overflowing beyond page

--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,8 @@ body {
   font-family: 'Comfortaa';
   color: var(--c-minor-text);
   background-color: var(--c-background);
+  background-position: top;
+  background-repeat: no-repeat;
 }
 
 h1, h2, h3, h4, h5, p {
